kio_sftp: Call the password dialog for kbdint too.

BUG: 278986